--- a/public/styles/css/agency.css
+++ b/public/styles/css/agency.css
@@ -109,7 +109,7 @@ img::-moz-selection {
 }
 
 #mainNav {
-  
+  background-color: (grey, rgb(95, 95, 200));
   
 }
 
@@ -120,20 +120,17 @@ img::-moz-selection {
   text-transform: uppercase;
   color: white;
   border: 0;
-  
-  
+  background-color: #fed136;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-brand {
   color: #fed136;
-  
   font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
   color: #fec503;
-  
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
@@ -142,13 +139,11 @@ img::-moz-selection {
   padding: 0.75em 0;
   letter-spacing: 1px;
   color: white;
-  
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
   color: #fed136;
-  
 }
 
 @media (min-width: 992px) {
@@ -159,7 +154,6 @@ img::-moz-selection {
     transition: padding-top 0.3s, padding-bottom 0.3s;
     border: none;
     background-color: transparent;
-    
   }
   #mainNav .navbar-brand {
     font-size: 1.75em;
@@ -172,7 +166,7 @@ img::-moz-selection {
   #mainNav.navbar-shrink {
     padding-top: 0;
     padding-bottom: 0;
-    
+    background-color: #212529;
   }
   #mainNav.navbar-shrink .navbar-brand {
     font-size: 1.25em;
@@ -218,18 +212,19 @@ header.masthead .intro-text .intro-heading {
     padding-bottom: 200px;
   }
   header.masthead .intro-text .intro-lead-in {
-    font-size: 40px;
+    font-size: 60px;
     font-style: italic;
     line-height: 40px;
     margin-bottom: 25px;
     font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
   header.masthead .intro-text .intro-heading {
-    font-size: 75px;
+    font-size: 25px;
     font-weight: 700;
     line-height: 75px;
     margin-bottom: 50px;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    
   }
 }
 
@@ -605,7 +600,7 @@ header.masthead .intro-text .intro-heading {
   background-image: url("");
   background-repeat: no-repeat;
   background-position: cover;
-  height: 850px;
+  height: 740px;
   }
 
   .img-fluid{
@@ -620,7 +615,7 @@ header.masthead .intro-text .intro-heading {
   background-image: url("");
   background-repeat: no-repeat;
   background-position: cover;
-  
+  height: 850px;
   
   
  }
@@ -690,7 +685,7 @@ section#contact :-ms-input-placeholder {
 .footer {
   padding: 25px 0;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.692)
+  background-color: rgba(0, 0, 0, 0.692);
 }
 
 .footer span.copyright {
@@ -731,27 +726,22 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
 }
 
 
-/*-----------------------LoginPage----------------------------*/
+/*///////////////////LOgin container*/
 :root {
   --input-padding-x: 1.5rem;
   --input-padding-y: .75rem;
 }
 
 .containerLogin {
-  background: #3b29a1;
-  background: linear-gradient(to right, #0062E6, #33AEFF);
-  background: url("");
-  height: 740px;
- 
+  background: #ffffff;
+  height: 750px;;
+  
 }
 
 .card-signin {
   border: 0;
   border-radius: 1rem;
   box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
-  align-content: center;
-  text-align: center;
-  
 }
 
 .card-signin .card-title {
@@ -762,7 +752,6 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
 
 .card-signin .card-body {
   padding: 2rem;
-  
 }
 
 .form-signin {
@@ -874,6 +863,3 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
     color: #777;
   }
 }
-
-
-
